--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,5 +33,8 @@ main {
 }
 
 /* #region MaterializeCSS overrides */
+.brand-logo{
+    height: 64px;
+}
 
 /* #endregion MaterializeCSS overrides */
