--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -14,6 +14,7 @@
     --granite-gray: #363E42;
     --slate-gray: #7C8180;
     --stone-gray: #D1D2CE;
+    --white: #fff;
 }
 
 /* #region Main colors */
