--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,17 +8,21 @@ body {
 body {
     display: flex;
     /* Adjust min-height of body to account for nav and footer */
-    min-height: calc(100vh - 132px);    
+    min-height: calc(100vh - 132px);
     flex-direction: column;
     color: var(--granite-gray);
     /* Padding at the bottom to make sure content is always below the fixed header and above the fixed footer */
     padding: 56px 0 76px;
 }
 
-header{
+header {
     position: fixed;
     top: 0;
     width: 100%;
+}
+
+nav {
+    display: flex;
 }
 
 main {
@@ -36,6 +40,36 @@ footer {
     display: flex;
 }
 
+.brand-container {
+    display: flex;
+
+}
+
+.brand-container h1 {
+    font-size: 56px;
+    line-height: 56px;
+    margin: 0;
+}
+
+.brand-container img {
+    height: 64px;
+}
+
+@media only screen and (max-width: 601px) {
+    .brand-container {
+        margin: 0 auto;
+    }
+
+    .brand-container h1 {
+        font-size: 48px;
+        line-height: 48px;
+    }
+
+    .brand-container img {
+        height: 56px;
+    }
+}
+
 .sidenav-brand-logo {
     width: 100%;
     height: auto;
@@ -50,6 +84,10 @@ footer {
 .question-container {
     height: 100%;
     padding: .5rem 1.5rem;
+}
+
+.question-container .row{
+    margin: 0;
 }
 
 .prev-btn {
@@ -72,41 +110,38 @@ footer {
 }
 
 /* #region MaterializeCSS overrides */
-.brand-logo {
-    height: 64px;
-}
 
 /* label color */
 .input-field label {
-    color: var(--granite-gray);
+    color: var(--granite-gray) !important;
 }
 
 /* label focus color */
 .input-field input[type=text]:focus+label {
-    color: var(--granite-gray);
+    color: var(--granite-gray) !important;
 }
 
 /* label underline focus color */
 .input-field input[type=text]:focus {
-    border-bottom: 1px solid var(--granite-gray);
-    box-shadow: 0 1px 0 0 var(--granite-gray);
+    border-bottom: 1px solid var(--granite-gray) !important;
+    box-shadow: 0 1px 0 0 var(--granite-gray) !important;
 }
 
 /* valid color */
 .input-field input[type=text].valid {
-    border-bottom: 1px solid var(--forest-green);
-    box-shadow: 0 1px 0 0 var(--forest-green);
+    border-bottom: 1px solid var(--forest-green) !important;
+    box-shadow: 0 1px 0 0 var(--forest-green) !important;
 }
 
 /* invalid color */
 .input-field input[type=text].invalid {
-    border-bottom: 1px solid var(--poppy-red);
-    box-shadow: 0 1px 0 0 var(--poppy-red);
+    border-bottom: 1px solid var(--poppy-red) !important;
+    box-shadow: 0 1px 0 0 var(--poppy-red) !important;
 }
 
 /* icon prefix focus color */
 .input-field .prefix.active {
-    color: var(--granite-gray);
+    color: var(--granite-gray) !important;
 }
 
 /* #endregion MaterializeCSS overrides */
