--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,9 @@
 @import "colors.css";
 
+* {
+    box-sizing: border-box;
+}
+
 html,
 body {
     height: 100%;
@@ -19,6 +23,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 100;
 }
 
 nav {
@@ -34,6 +39,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 100;
 }
 
 .footer-row {
@@ -55,7 +61,7 @@ footer {
     height: 64px;
 }
 
-@media only screen and (max-width: 601px) {
+@media only screen and (max-width: 992px) {
     .brand-container {
         margin: 0 auto;
     }
